# 512

./: .gitattributes  .gitignore  README.md  flake.nix
01/: solution.py
02/: README.md
03/: README.md
04/: README.md  c10.py
06/: desansed.py
07/: json.txt  out.txt  test.py
09/: README.md
1/: README.md
10/: README.md  tetris_trademark_2022.html
11/: Cargo.toml  README.md
11/src/: lib.rs
12/: README.md  file.py
13/: README.md
14/: README.md  desansed.py  file.py  test.py
15/: README.md  bin.go
17/: README.md  axiom.py
18/: README.md  Untitled
2/: TWENTY_THREE.py
20/: README.md  orig.bqn  tic tac toesy woesy.hs
21/: README.md  desansed.py  e621.py
22/: Line.plr  README.md
23/: README.md  highlighted.j
24/: DEAL.py  README.md
25/: README.md  notes
26/: 5  README.md
3/: matrix_multiplication.py
30/: README.md  meow.rs
31/: APYL.py  README.md  cleartext.py  orig.dyalog
32/: README.md  maze.zc
34/: .py  README.md
35/: README.md  ピコはユー！(pico is you!).lua
37/: README.md  bits  digit_classification.ipynb  roots
38/: README.md  entry  entry.tar
38/pics/:          !  "  #  $  %  &  (  )  *  +  ,  -  0  1  2  3  4  5  6  7  8  9  ;  <  =  >  ?  @  [  \  ]  `  a  b  c  e  f  g  (+18 more)
39/: README.md  brainstorming  x39.cabal
39/app/: hi!.hs  hi-clean.hs  hi-commentless.hs
42/: Cargo.toml  README.md  instructions
5/: PYSP.py  README.md
6/: README.md
7/: JSON.c  JSON.rs  README.md  convert.py  polyglot-test.rs  states.txt
8/: Cargo.toml  README.md
9/: minesweeper2.js
scripts/: make_readme.sh
