cabal-version:      2.4
name:               x39
version:            0.1.0.0

author:             RocketRace
maintainer:         oliviaspalmu@gmail.com

extra-source-files: CHANGELOG.md

executable x39
    main-is:          hi!.hs
    build-depends:    base ^>=4.16.4.0, mtl, lens, megaparsec, text
    hs-source-dirs:   app
    default-language: Haskell2010
executable x39s
    main-is:          hi-commentless.hs
    build-depends:    base ^>=4.16.4.0, mtl, lens, megaparsec, text
    hs-source-dirs:   app
    default-language: Haskell2010
executable x39c
    main-is:          hi-clean.hs
    build-depends:    base ^>=4.16.4.0, mtl, lens, megaparsec, text
    hs-source-dirs:   app
    default-language: Haskell2010
