[package]
name = "_512"
version = "0.0.0"
authors = [ "RocketRace <oliviaspalmu@gmail.com>" ]
description = "The game of 2048 for the Esolangs Code Guessing round 42"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ti = { version = "1.2", git = "https://github.com/RocketRace/ti.git", features = ["images"] }
